Fix scrollbars not hiding in FF

--- a/src/sass/helpers.scss
+++ b/src/sass/helpers.scss
@@ -5,6 +5,7 @@
 @mixin invisible-x-scroll {
   overflow-y: hidden;
   overflow-x: scroll;
+  scrollbar-width: none;
   scrollbar-height: none;
   -ms-overflow-style: none;
   &::-webkit-scrollbar {
